# fastapi

./: books.py  books2.py  pyproject.toml
TodoApp/: database.py  main.py  models.py  todos.db  todosapp.db
TodoApp/routers/: auth.py  todos.py
project2/: books2.py
