[tool.poetry]
name = "fastapi-mine"
version = "0.1.0"
description = ""
authors = ["ajinath ghodake"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "4.0.1"
cryptography = "^42.0.8"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
passlib = "^1.7.4"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
aiofiles = "^24.1.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
